--- a/overlays/prod/kustomisation.yaml
+++ b/overlays/prod/kustomisation.yaml
@@ -21,5 +21,5 @@ patchesStrategicMerge:
 
 images:
   - name: app-image
-    newName: ghcr.io/<ton-username>/cliet-tableaux-angular
+    newName: ghcr.io/Benjaliette/cliet-tableaux-angular
     newTag: latest
