update image name and volume for nginx

--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -19,4 +19,4 @@ patchesStrategicMerge:
 images:
 - name: app-image
   newName: ghcr.io/benjaliette/cliet-tableaux-angular
-  newTag: main-035e25a
+  newTag: latest
