--- a/overlays/prod/kustomization.yaml
+++ b/overlays/prod/kustomization.yaml
@@ -17,6 +17,6 @@ patchesStrategicMerge:
 - ingress-patch.yaml
 
 images:
-- name: app-image
+- name: cliet-tableaux-angular
   newName: ghcr.io/benjaliette/cliet-tableaux-angular
   newTag: latest
