--- a/overlays/prod/ingress-patch.yaml
+++ b/overlays/prod/ingress-patch.yaml
@@ -2,6 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: cliet-tableaux-angular
+  namespace: production
 spec:
   rules:
   - host: www.cliet-tableaux.fr
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: cliet-tableaux-angular
+            port:
+              number: 80
