--- a/overlays/prod/ingress-patch.yaml
+++ b/overlays/prod/ingress-patch.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: cliet-tableaux-angular
+  annotations:
+    traefik.ingress.kubernetes.io/router.middlewares: production-redirect-to-www-prod@kubernetescrd
 spec:
   rules:
   - host: www.cliet-tableaux.fr
@@ -14,3 +16,17 @@ spec:
             name: cliet-tableaux-angular
             port:
               number: 80
+  - host: cliet-tableaux.fr
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: cliet-tableaux-angular
+            port:
+              number: 80
+  tls:
+  - hosts:
+    - www.cliet-tableaux.fr
+    - cliet-tableaux.fr
