move middleware to base

--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -5,8 +5,9 @@ metadata:
   namespace: cliet-tableaux
   annotations:
     spec.ingressClassName: "traefik"
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     traefik.ingress.kubernetes.io/router.tls.certresolver: default
+    traefik.ingress.kubernetes.io/router.middlewares: redirect-to-www@kubernetescrd,redirect-to-https@kubernetescrd
 spec:
   rules:
     - host: www.cliet-tableaux.fr
