--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+  - middleware.yaml
 
 commonLabels:
   app: cliet-tableaux-angular
