--- a/base/middleware.yaml
+++ b/base/middleware.yaml
@@ -8,3 +8,14 @@ spec:
     regex: "^https?://cliet-tableaux.fr/(.*)"
     replacement: "https://www.cliet-tableaux.fr/${1}"
     permanent: true
+
+---
+
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: redirect-to-https
+spec:
+  redirectScheme:
+    scheme: https
+    permanent: true
