--- a/overlays/prod/ingress-patch.yaml
+++ b/overlays/prod/ingress-patch.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: cliet-tableaux-angular
+  annotations:
+    traefik.ingress.kubernetes.io/router.middlewares: redirect-to-www-prod@kubernetescrd,redirect-to-https-prod@kubernetescrd
 spec:
   rules:
   - host: www.cliet-tableaux.fr
