--- a/overlays/prod/ingress-patch.yaml
+++ b/overlays/prod/ingress-patch.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: cliet-tableaux-angular
   annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     traefik.ingress.kubernetes.io/router.middlewares: production-redirect-to-www-prod@kubernetescrd,production-redirect-to-https-prod@kubernetescrd
 spec:
   rules:
